[tool.poetry]
name = "phase"
version = "1.0.0"
description = ""
authors = ["Thibault Jouannic <thibault@miximum.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "~3.2"
ansible = "^4.1.0"
django-braces = "^1.14.0"
django-model-utils = "^4.1.1"
django-pipeline = "^2.0.6"
django-widget-tweaks = "^1.4.8"
Unipath = "^1.1"
django-crispy-forms = "^1.12.0"
djangorestframework = "^3.12.4"
celery = "^5.1.2"
requests = "^2.25.1"
django-zipview = "^1.2.0"
elasticsearch = "^7.13.2"
elasticsearch-dsl = "^7.3.0"
reportlab = "^3.5.68"
openpyxl = "^3.0.7"
raven = "^6.10.0"
django-extensions = "^3.1.3"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
django-discover-runner = "^1.0"
django-debug-toolbar = "^3.2.1"
Sphinx = "^4.0.2"
fabric = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
